# casola-workers

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
casola_worker/: gpu_health.py  system_metrics.py  transport.py
comfy/: build.sh
comfy/base/: Dockerfile  entrypoint.sh  worker.py
comfy/workflows/qwen-image-2512/: Dockerfile  config.json  workflow.json
integration-test/: Dockerfile  README.md  build.sh  entrypoint.sh  requirements.txt  worker.py
lightx2v/: Dockerfile  build.sh  entrypoint.sh  test_worker.py  worker.py
lightx2v/configs/: qwen_image_2512_fp8.json  qwen_image_edit_2511_fp8.json  wan_i2v_nvfp4.json  wan_t2v_nvfp4.json
test-server/: README.md  pyproject.toml
test-server/casola_test_server/: __init__.py  app.py  dispatch.py  models.py
test-server/tests/: conftest.py  test_e2e.py
tools/: combine.sh  model.Dockerfile  models.json
vllm/: Dockerfile  README.md  build.sh  entrypoint.sh  requirements.txt  sm120_fp4_patch.py  worker.py
vllm-omni/: Dockerfile  build.sh
your-worker-name/: README.md  worker.py
