[project]
name = "casola-workers"
version = "0.1.0"
description = "SDK for building Casola GPU worker containers"
requires-python = ">=3.10"
dependencies = ["websockets>=12.0", "requests>=2.28.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["casola_worker"]
