[project]
name = "casola-test-server"
version = "0.1.0"
description = "Standalone test server for 3rd-party Casola worker integration testing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "uuid7>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["casola_test_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
